# DNS-Resolver-with-Poco-C-libraries

./: Installation.md  README.md
Day 1/: main.cpp
Day 2/: Summary 2.md  code  main.cpp
Day 3/: Code  Summary.md
Day 4/: recursive_resolver.cpp
Nidhi_SCEM_C++_Task1/: Summary.md
Nidhi_SCEM_C++_Task2/: main.cpp
Nidhi_SCEM_C++_Task3/: Summary.md  main.cpp
Nidhi_SCEM_C++_Task4/: CMakeLists.txt  Summary.md  main.cpp  recursive_resolver.h
Nidhi_SCEM_C++_Task5/: main.cpp  recursive_resolver.cpp  recursive_resolver.h
